# CGAL_Matlab

./: README.md
examples/: test_convex_partition.m  y_monotone_partition_indices_2.mexa64
greene_approx_convex_partition_2/: CMakeLists.txt  greene_approx_convex_partition.mexa64
optimal_convex_partition_2/: CMakeLists.txt  mex_main.h  mex_wrap.cpp  optimal_convex_partition_2.cpp
